[package]
name = "yugumo"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
log = "0.4"
log4rs = "1"
socket2 = "0.5"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
arc-swap = "1"

[profile.release]
lto = true
codegen-units = 1